kubernetes-training-files/nginx-deployment-simple.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-simple
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
