kubernetes-training-files/nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: class1
  name: nginx-pod
spec:
  containers:
  - name: nginx-pod
    image: nginx:latest
    imagePullPolicy: IfNotPresent
