kubernetes-training-files/nginx-service-clusterip-simple.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-clusterip-simple
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP # This is the default type, no need to explicitly specify it, but it can be included for clarity
