kubernetes-training-files/nginx-service-nodeport-simple.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-nodeport-simple
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80         # This is the port that the service will expose internally within the cluster
    targetPort: 80   # This is the port on the container that the traffic will be forwarded to
    nodePort: 30007  # This is the static port on each node where the service will be exposed externally Port Range: 30000-32767
  type: NodePort     # Exposes the service on a static port (nodePort) on each node’s IP
